ClassicUpload as Build Step and Pipeline.
Adding the ability to use ClassicUpload both as a Build step and in a
pipeline.

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -18,6 +18,7 @@ AbstractUploadDescriptor.BadBucketChar=Invalid character in bucket: {0} ({1})
 ClassicUpload.EmptyGlob=File pattern is empty
 ClassicUpload.BadGlobChar=Invalid character in pattern: {0} ({1})
 ClassicUpload.DisplayName=Classic Upload
+ClassicUpload.BuildStepDisplayName=Google Storage Classic Upload
 StdoutUpload.DisplayName=Build Log Upload
 StdoutUpload.DetailsMessage={0} (Build Log)
 StdoutUpload.LogNameRequired=A log name is required
