Updates to the appName.
Modify appName to:
- Become a single token
- Add version numbers
- Reflect the fact that this plugin will no longer be limited to
uploading.

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -40,6 +40,6 @@ AbstractUpload.ForbiddenFileUpload=You aren\'t authorized to upload files to thi
 AbstractUpload.BucketObjectAclsError=Unable to access the default object ACLs for bucket: {0}
 AbstractUpload.ExceptionGetBucket=exception fetching/creating bucket: {0}
 UploadModule.ExceptionStorageService=exception accessing storage service
-UploadModule.AppName=Jenkins GCS Uploader
+UploadModule.AppName=Jenkins-GCS-Plugin
 AbstractGcsUploadReport.DisplayName=Google Cloud Storage Upload Report
 AbstractUpload.UploadError=Encountered an exception during upload, attempt: {0}
