Introducing Download Step, both as a Build step and Pipeline.

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -19,6 +19,9 @@ ClassicUpload.EmptyGlob=File pattern is empty
 ClassicUpload.BadGlobChar=Invalid character in pattern: {0} ({1})
 ClassicUpload.DisplayName=Classic Upload
 ClassicUpload.BuildStepDisplayName=Google Storage Classic Upload
+Download.DownloadException=Exception while performing download
+Download.BuildStepDisplayName=Google Storage Download
+Download.EmptyDir=Please enter the local directory to store the files
 StdoutUpload.DisplayName=Build Log Upload
 StdoutUpload.DetailsMessage={0} (Build Log)
 StdoutUpload.LogNameRequired=A log name is required
