Adding a simple wildcard.

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -22,6 +22,9 @@ ClassicUpload.BuildStepDisplayName=Google Storage Classic Upload
 Download.DownloadException=Exception while performing download
 Download.BuildStepDisplayName=Google Storage Download
 Download.EmptyDir=Please enter the local directory to store the files
+Download.UnsupportedAsteriskInBucket=Wildcards in bucket name are not supported: {0}
+Download.UnsupportedMultipleAsterisks=Multiple asterisks in the cloud path are not yet supported: {0}
+Download.UnsupportedDirSuffix=Slashes after wildcards are not yet supported: {0}
 StdoutUpload.DisplayName=Build Log Upload
 StdoutUpload.DetailsMessage={0} (Build Log)
 StdoutUpload.LogNameRequired=A log name is required
