Serialization fix + logging to console
* StorageObject is not Serializable, which caused problems when attempting
to execute on a slave.

* Added logging to the listener rather than the info log. This way these
messages show up in the console.

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -25,6 +25,8 @@ Download.EmptyDir=Please enter the local directory to store the files
 Download.UnsupportedAsteriskInBucket=Wildcards in bucket name are not supported: {0}
 Download.UnsupportedMultipleAsterisks=Multiple asterisks in the cloud path are not yet supported: {0}
 Download.UnsupportedDirSuffix=Slashes after wildcards are not yet supported: {0}
+Download.FoundForPattern=Found {0} files to download from pattern: {1}
+Download.Downloading=Downloading: {0} to local path: {1}
 StdoutUpload.DisplayName=Build Log Upload
 StdoutUpload.DetailsMessage={0} (Build Log)
 StdoutUpload.LogNameRequired=A log name is required
