UI for StdoutUploadStep and fixed hardcoded error message

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -51,4 +51,4 @@ UploadModule.ExceptionStorageService=exception accessing storage service
 UploadModule.AppName=Jenkins-GCS-Plugin
 AbstractGcsUploadReport.DisplayName=Google Cloud Storage Upload Report
 AbstractUpload.UploadError=Encountered an exception during upload, attempt: {0}
-AbstractUpload.NullAccessError=Null object provided in access contro list
+AbstractUpload.NullAccessError=Null object provided in access control list
