--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -31,6 +31,7 @@ StdoutUpload.DisplayName=Build Log Upload
 StdoutUpload.DetailsMessage={0} (Build Log)
 StdoutUpload.LogNameRequired=A log name is required
 StdoutUpload.BadChar=Invalid character in log name: {0} ({1})
+StdoutUpload.FailToUpload=Could not perform build log upload
 StdoutUpload.BuildStepDisplayName=Google Storage Build Log Upload
 ExpiringBucketLifecycleManager.DisplayName=Bucket with expiring elements lifecycle
 ExpiringBucketLifecycleManager.DetailsMessage=Contents expire in {0} days
