display name for ExpiringBucketLifecycleManagerStep

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -35,6 +35,7 @@ StdoutUpload.FailToUpload=Could not perform build log upload
 StdoutUpload.BuildStepDisplayName=Google Storage Build Log Upload
 ExpiringBucketLifecycleManager.DisplayName=Bucket with expiring elements lifecycle
 ExpiringBucketLifecycleManager.DetailsMessage=Contents expire in {0} days
+ExpiringBucketLifecycleManager.BuildStepDisplayName=Google Storage Bucket Lifecycle
 AbstractBucketLifecycleManagerDescriptor.MultiPartBucket=Bucket name cannot contain multiple parts: {0}
 AbstractUpload.IncludeException=Exception while resolving inclusions.
 AbstractUpload.UploadException=Exception while performing upload
