Made error message for expiring buckets perform and fixed typo in ITUtil doc.

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -36,6 +36,7 @@ StdoutUpload.BuildStepDisplayName=Google Storage Build Log Upload
 ExpiringBucketLifecycleManager.DisplayName=Bucket with expiring elements lifecycle
 ExpiringBucketLifecycleManager.DetailsMessage=Contents expire in {0} days
 ExpiringBucketLifecycleManager.BuildStepDisplayName=Google Storage Bucket Lifecycle
+ExpiringBucketLifecycleManager.FailToSetExpiration=Could not configure time to live for bucket
 AbstractBucketLifecycleManagerDescriptor.MultiPartBucket=Bucket name cannot contain multiple parts: {0}
 AbstractUpload.IncludeException=Exception while resolving inclusions.
 AbstractUpload.UploadException=Exception while performing upload
