Pipeline DSL syntax(#70)
Added pipeline DSL syntax functionality with integration tests. Upgraded Jenkins version in POM. StdoutUpload and ExpiringBucketLifecycleManager are available now as build steps.

--- a/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
+++ b/src/main/resources/com/google/jenkins/plugins/storage/Messages.properties
@@ -31,8 +31,12 @@ StdoutUpload.DisplayName=Build Log Upload
 StdoutUpload.DetailsMessage={0} (Build Log)
 StdoutUpload.LogNameRequired=A log name is required
 StdoutUpload.BadChar=Invalid character in log name: {0} ({1})
+StdoutUpload.FailToUpload=Could not perform build log upload
+StdoutUpload.BuildStepDisplayName=Google Storage Build Log Upload
 ExpiringBucketLifecycleManager.DisplayName=Bucket with expiring elements lifecycle
 ExpiringBucketLifecycleManager.DetailsMessage=Contents expire in {0} days
+ExpiringBucketLifecycleManager.BuildStepDisplayName=Google Storage Bucket Lifecycle
+ExpiringBucketLifecycleManager.FailToSetExpiration=Could not configure time to live for bucket
 AbstractBucketLifecycleManagerDescriptor.MultiPartBucket=Bucket name cannot contain multiple parts: {0}
 AbstractUpload.IncludeException=Exception while resolving inclusions.
 AbstractUpload.UploadException=Exception while performing upload
@@ -51,3 +55,4 @@ UploadModule.ExceptionStorageService=exception accessing storage service
 UploadModule.AppName=Jenkins-GCS-Plugin
 AbstractGcsUploadReport.DisplayName=Google Cloud Storage Upload Report
 AbstractUpload.UploadError=Encountered an exception during upload, attempt: {0}
+AbstractUpload.NullAccessError=Null object provided in access control list
